# module-pipeline

./: .gitignore  CMakeLists.txt
include/: CameraSensor.h  ColorProcessor.h  IModule.h  LoggerBase.h  MovementDetector.h  Pipeline.h
src/: CameraSensor.cpp  ColorProcessor.cpp  MovementDetector.cpp  main.cpp
